# snowfish-movement

./: README.md
plugin-snowfish/: .gitignore  README.md  package.json
plugin-snowfish/src/: index.ts
plugin-snowfish/src/actions/: gen_chain_move_module.ts  gen_move_test_scripts.ts  get_dependencies.ts  get_entry_functions.ts  get_events.ts  get_friend_functions.ts  get_friends.ts  get_frozen_objects.ts  get_function_signature.ts  get_functions.ts  get_mode.ts  get_modules.ts  get_objects.ts  get_otw_structs.ts  get_phantom_structs.ts  get_private_functions.ts  get_public_functions.ts  get_shared_objects.ts  get_struct_definition.ts  get_structs.ts  get_transferred_objects.ts  get_tx_context_functions.ts  move_disassemble.ts  move_signature.ts  security_scan.ts  set_mode.ts  unchecked_return.ts  unused_constant.ts  unused_private_functions.ts
plugin-snowfish/src/providers/: mode.ts
plugin-snowfish/src/snowfish/: update.sh
plugin-snowfish/src/snowfish/pkg/: env.js  package-lock.json  package.json  sui_wasm.d.ts  sui_wasm.js  sui_wasm_bg.js  sui_wasm_bg.wasm.d.ts  tsup.config.ts
plugin-snowfish/src/snowfish/pkg/snippets/sui-wasm-9cb1bf37fd8cab51/: call-js.js
plugin-snowfish/src/snowfish/wrappers/: sui_wasm.ts
snowfish/: Cargo.toml  README.md
snowfish/src/: lib.rs
wasm_test_aptos/: .gitignore  Move.toml  README.md  package.json  tsconfig.json
wasm_test_aptos/sources/: justin_coin_6.move  wasm_test.move
wasm_test_aptos/template/: sui_wasm.js  sui_wasm_test.ts
wasm_test_aptos/tests/: wasm_tests.test.ts
wasm_test_aptos/tests/wrappers/: sui_wasm.ts
wasm_test_aptos/tests/wrappers/dependencies/MoveStdlib/: account.ts  acl.ts  aggregator.ts  aggregator_factory.ts  aggregator_v2.ts  any.ts  aptos_account.ts  aptos_coin.ts  aptos_governance.ts  aptos_hash.ts  atomic_bridge.ts  atomic_bridge_configuration.ts  atomic_bridge_counterparty.ts  atomic_bridge_initiator.ts  atomic_bridge_store.ts  bcs.ts  big_vector.ts  bit_vector.ts  block.ts  bls12381.ts  bls12381_algebra.ts  bn254_algebra.ts  capability.ts  chain_id.ts  chain_status.ts  code.ts  coin.ts  comparator.ts  config_buffer.ts  consensus_config.ts  copyable_any.ts  create_signer.ts  crypto_algebra.ts  debug.ts  delegation_pool.ts  dispatchable_fungible_asset.ts  dkg.ts  ed25519.ts  error.ts  ethereum.ts  (+72 more)
wasm_test_aptos/tests/wrappers/dependencies/wasm_test/: moon_coin.ts  wasm_test.ts
